Created shared folder in components, moved common components to shared

--- a/content/blog/example.mdx
+++ b/content/blog/example.mdx
@@ -1,10 +1,10 @@
 ---
 title: MDX!
-date: "2019-10-22"
-description: "A post showing MDX in action"
+date: '2019-10-22'
+description: 'A post showing MDX in action'
 ---
 
-import Button from "src/components/button"
+import Button from 'src/components/shared/button'
 
 This is a post showing MDX in action. This starter now comes with MDX out-of-the-box!
 
@@ -21,7 +21,7 @@ You can also import custom React components locally. Make sure [gatsby-plugin-ro
 
 ```jsx
 // Import custom component
-import Button from "src/components/button"
+import Button from 'src/components/shared/button'
 ```
 
 ```jsx
